--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9526,6 +9526,8 @@ body.dark-theme {
 }
 .list_view_container .list_view_body .list_view_item .item_content {
   width: calc(100% - 126px);
+  display: flex;
+  flex-direction: column;
 }
 @media (max-width: 768px) {
   .list_view_container .list_view_body .list_view_item .item_content {
@@ -9577,6 +9579,7 @@ body.dark-theme {
   overflow: hidden;
   font-size: 14px;
   text-align: justify;
+  flex: 1 1 auto !important;
 }
 .list_view_container .list_view_body .list_view_item .item_content .item_btn_wrapper {
   position: relative;
@@ -10297,4 +10300,16 @@ body.dark-theme {
   font-size: 12px;
   font-weight: 400;
   font-style: italic;
+}
+
+div#loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.6117647059);
+  color: white;
 }/*# sourceMappingURL=style.css.map */
